fix mobile layout issues

--- a/main/src/resources/app/css/tramchester.css
+++ b/main/src/resources/app/css/tramchester.css
@@ -128,4 +128,18 @@
     border: 1px solid lightcoral;
 }
 
+.v-data-table tr td {
+    font-size: 12px !important;
+}
 
+.v-data-table .v-data-table-header tr th {
+    font-size: 10px !important;
+}
+
+/* .live-departures-table  {
+    table-layout : fixed;
+} */
+
+/* .journeys-table  {
+    table-layout : fixed;
+} */
